Crisis Response App/objects/Location_Crisis_Effect__c.object
<CustomObject>
    <description>A specific issue that a location is experiencing due to a crisis. E.g. water damage, closure, etc.</description>
    <fields>
        <fullName>Closure_Status__c</fullName>
        <inlineHelpText>Current status of the effected location</inlineHelpText>
        <label>Closure Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Soft Close</fullName>
                </value>
                <value>
                    <fullName>Hard Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Impact__c</fullName>
        <inlineHelpText>Description of how the crisis has impacted the community the location is a part of</inlineHelpText>
        <label>Community Impact</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Crisis__c</fullName>
        <inlineHelpText>The crisis that is related to the issue occurring at the location</inlineHelpText>
        <label>Crisis</label>
        <referenceTo>Crisis__c</referenceTo>
        <relationshipLabel>Impacted Locations</relationshipLabel>
        <relationshipName>Location_Crisis_Issues</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Effect_Status__c</fullName>
        <label>Effect Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Currently Affected</fullName>
                </value>
                <value>
                    <fullName>No Longer Affected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Open_Date__c</fullName>
        <inlineHelpText>Date the location is expected to open</inlineHelpText>
        <label>Expected Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location_Close_Date__c</fullName>
        <inlineHelpText>Date the location closed/will close</inlineHelpText>
        <label>Location Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Location related to the specific issue</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Location Impact</relationshipLabel>
        <relationshipName>Location_Crisis_Issues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ongoing_Issues__c</fullName>
        <inlineHelpText>Description of  the effect the crisis has had on the location</inlineHelpText>
        <label>Ongoing Issues</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Risk_Level__c</fullName>
        <inlineHelpText>At what risk is the location?</inlineHelpText>
        <label>Risk Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closure</fullName>
                </value>
                <value>
                    <fullName>Building Damage</fullName>
                </value>
                <value>
                    <fullName>Community Regulation</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Location Crisis Impact</label>
    <nameField>
        <displayFormat>LOC-EFF{00000}</displayFormat>
        <label>Location Effect Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Crisis Impact</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>